Did not fixed layout issue with footer

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* ==== TODO fix fing layout issue with footer aaaaaaaa ==== */
+
 /* Global Resets */
 *,
 *::before,
@@ -8,6 +10,8 @@
 }
 
 html {
+    position: relative;
+
     min-height: 100%;
 }
 
@@ -19,6 +23,7 @@ body {
     height: 100vh;
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
+    /* margin-bottom: 100px; */
 }
 
 @font-face {
@@ -84,7 +89,7 @@ input[type="number"] {
     flex-direction: column;
     background-color: #2e1065;
     width: 100%;
-    /* height: 100vh; */
+    /* height: 100%; */
 }
 
 /* Add Book Button */
@@ -98,7 +103,7 @@ input[type="number"] {
 /* Library */
 .library-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 42px;
     margin-top: 20px;
     padding: 12px;
@@ -109,27 +114,24 @@ input[type="number"] {
 
 /* Library Cards */
 .book-card-container {
-    /* width: 200px; */
     --b: 4px;
     --s: .42em;
     --color: #4545ff;
-
-    padding: calc(.5em + var(--s)) calc(.9em + var(--s));
+    padding: calc(.25em + var(--s)) calc(.25em + var(--s));
     color: black;
     --_p: var(--s);
     background:
         conic-gradient(from 90deg at var(--b) var(--b), #0000 90deg, var(--color) 0) var(--_p) var(--_p)/calc(100% - var(--b) - 2*var(--_p)) calc(100% - var(--b) - 2*var(--_p));
-    outline: var(--b) solid #0000;
-    outline-offset: .6em;
 }
 
 .book-card {
+    background-color: #4c1d95;
+
     align-self: center;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* align-items: center; */
     padding: 10%;
 }
 
@@ -155,6 +157,9 @@ input[type="number"] {
 
 /* Footer */
 .footer {
+    /* position: absolute; */
+    bottom: 0;
+    left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
